# splat

./: CMakeLists.txt  configure.sh  lexicon.py  splat.cpp
